added auth with api-gateway and zipkins also written unit cases